--- a/my/index.html
+++ b/my/index.html
@@ -11,7 +11,8 @@
 <body>
     <header>
         <h1>Артем Горшков</h1>
-        <p>QA-engeener (на обучении)</p>
+        <p>QA-engeener</p>
+        <p>QA</p>
         <div class="item">
             <img class="photo" src="me.jpg" width="170" height="170" alt="фото">
         </div>
